<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:textColor="#EE0000"
        android:textSize="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/lba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lba"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#009966"
            />

        <EditText
            android:id="@+id/edta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/lbb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbb"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#009966"
            />

        <EditText
            android:id="@+id/edtb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/lbkq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbkq"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#EE0000"
            />

        <EditText
            android:id="@+id/edtKQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:enabled="false"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnRequest"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textRequest"
        android:layout_gravity="center"
        />

</LinearLayout>